infra/manifests/network-policies/redcap-mtls.yaml
---
# redcap-service only accepts mTLS connections from ecrin
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: redcap-service-mtls
  namespace: ecrin
spec:
  description: 'redcap-service requires mTLS from ecrin only'
  endpointSelector:
    matchLabels:
      app: redcap-service
  ingress:
    - fromEndpoints:
        - matchLabels:
            app: ecrin
      toPorts:
        - ports:
            - port: '3000'
              protocol: TCP
      authentication:
        mode: required # mTLS required via SPIRE
---
# redcap-service can access external REDCap API
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: redcap-service-egress
  namespace: ecrin
spec:
  description: 'redcap-service can access external REDCap'
  endpointSelector:
    matchLabels:
      app: redcap-service
  egress:
    # Allow HTTPS to external world (REDCap API)
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: '443'
              protocol: TCP
---
# Authelia network policies
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: authelia-policies
  namespace: ecrin
spec:
  description: 'Authelia network access'
  endpointSelector:
    matchLabels:
      app: authelia
  ingress:
    # Accept from ingress (forward-auth)
    - fromEntities:
        - world
        - cluster
      toPorts:
        - ports:
            - port: '9091'
              protocol: TCP
  egress:
    # Can send emails via MailHog
    - toEndpoints:
        - matchLabels:
            app: mailhog
      toPorts:
        - ports:
            - port: '1025'
              protocol: TCP
---
# OPA network policies
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: opa-policies
  namespace: ecrin
spec:
  description: 'OPA accepts queries from ecrin and authelia'
  endpointSelector:
    matchLabels:
      app: opa
  ingress:
    - fromEndpoints:
        - matchLabels:
            app: ecrin
        - matchLabels:
            app: authelia
      toPorts:
        - ports:
            - port: '8181'
              protocol: TCP
---
# MailHog policies
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: mailhog-policies
  namespace: ecrin
spec:
  description: 'MailHog accepts SMTP from Authelia'
  endpointSelector:
    matchLabels:
      app: mailhog
  ingress:
    # SMTP from Authelia
    - fromEndpoints:
        - matchLabels:
            app: authelia
      toPorts:
        - ports:
            - port: '1025'
              protocol: TCP
    # Web UI from external (NodePort)
    - fromEntities:
        - world
      toPorts:
        - ports:
            - port: '8025'
              protocol: TCP
